// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSX Parser ternaries with basic values 1`] = `
Object {
  "react": Object {
    "importedAs": "React",
    "importedFromWithin": Array [],
    "importedWithName": null,
  },
  "utopia-api": Object {
    "importedAs": null,
    "importedFromWithin": Array [
      Object {
        "alias": "Scene",
        "name": "Scene",
      },
      Object {
        "alias": "Storyboard",
        "name": "Storyboard",
      },
      Object {
        "alias": "jsx",
        "name": "jsx",
      },
    ],
    "importedWithName": null,
  },
}
`;

exports[`JSX Parser ternaries with basic values 2`] = `
Array [
  Object {
    "rawCode": "/** @jsx jsx */
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "importStarAs": true,
    "importWithName": false,
    "imports": Array [],
    "module": "react",
    "rawCode": "import * as React from 'react'",
    "type": "IMPORT_STATEMENT",
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "importStarAs": false,
    "importWithName": false,
    "imports": Array [
      "Scene",
      "Storyboard",
      "jsx",
    ],
    "module": "utopia-api",
    "rawCode": "import { Scene, Storyboard, jsx } from 'utopia-api'",
    "type": "IMPORT_STATEMENT",
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": Object {
      "boundParam": Object {
        "defaultExpression": null,
        "paramName": "props",
        "type": "REGULAR_PARAM",
      },
      "dotDotDotToken": false,
      "type": "PARAM",
    },
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "text": "
      ",
          "type": "JSX_TEXT_BLOCK",
          "uniqueID": "",
        },
        Object {
          "condition": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": false,
          },
          "type": "JSX_CONDITIONAL_EXPRESSION",
          "uniqueID": "",
          "whenFalse": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "cookie",
          },
          "whenTrue": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "cake",
          },
        },
        Object {
          "text": "
    ",
          "type": "JSX_TEXT_BLOCK",
          "uniqueID": "",
        },
      ],
      "name": Object {
        "baseVariable": "div",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "backgroundColor": "#FFFFFF",
              "height": "100%",
              "width": "100%",
            },
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "layout",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "layoutSystem": "pinSystem",
            },
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "6eb",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "6eb",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "parenthesized-expression",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "height": 812,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 375,
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "javascript": "App",
                "sourceMap": Object {
                  "file": "code.tsx",
                  "mappings": "OA8BkBA",
                  "names": Array [
                    "App",
                  ],
                  "sources": Array [
                    "code.tsx",
                  ],
                  "sourcesContent": Array [
                    "/** @jsx jsx */
import * as React from 'react'
import { Scene, Storyboard, jsx } from 'utopia-api'
export var App = (props) => {
  return (
    <div
      style={{
        width: '100%',
        height: '100%',
        backgroundColor: '#FFFFFF',
      }}
      layout={{ layoutSystem: 'pinSystem' }}
    >
      {false ? 'cake' : 'cookie'}
    </div>
  )
}
export var storyboard = (
  <Storyboard
    data-uid={'utopia-storyboard-uid'}
    layout={{ layoutSystem: 'pinSystem' }}
  >
    <Scene
      style={{
        position: 'absolute',
        left: 0,
        top: 0,
        width: 375,
        height: 812,
      }}
      component={App}
      layout={{ layoutSystem: 'pinSystem' }}
      props={{
        layout: { bottom: 0, left: 0, right: 0, top: 0 },
      }}
      data-uid={'scene-aaa'}
    />
  </Storyboard>
)
",
                  ],
                  "version": 3,
                },
                "transpiledJavascript": "return App;",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uniqueID": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "layout",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "layoutSystem": "pinSystem",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "props",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "layout": Object {
                    "bottom": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                  },
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "scene-aaa",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "scene-aaa",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "utopia-storyboard-uid",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "layout",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "layoutSystem": "pinSystem",
            },
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "utopia-storyboard-uid",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
]
`;

exports[`JSX Parser ternaries with elements 1`] = `
Object {
  "react": Object {
    "importedAs": "React",
    "importedFromWithin": Array [],
    "importedWithName": null,
  },
  "utopia-api": Object {
    "importedAs": null,
    "importedFromWithin": Array [
      Object {
        "alias": "Scene",
        "name": "Scene",
      },
      Object {
        "alias": "Storyboard",
        "name": "Storyboard",
      },
      Object {
        "alias": "jsx",
        "name": "jsx",
      },
    ],
    "importedWithName": null,
  },
}
`;

exports[`JSX Parser ternaries with elements 2`] = `
Array [
  Object {
    "rawCode": "/** @jsx jsx */
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "importStarAs": true,
    "importWithName": false,
    "imports": Array [],
    "module": "react",
    "rawCode": "import * as React from 'react'",
    "type": "IMPORT_STATEMENT",
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "importStarAs": false,
    "importWithName": false,
    "imports": Array [
      "Scene",
      "Storyboard",
      "jsx",
    ],
    "module": "utopia-api",
    "rawCode": "import { Scene, Storyboard, jsx } from 'utopia-api'",
    "type": "IMPORT_STATEMENT",
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": Object {
      "boundParam": Object {
        "defaultExpression": null,
        "paramName": "props",
        "type": "REGULAR_PARAM",
      },
      "dotDotDotToken": false,
      "type": "PARAM",
    },
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "text": "
      ",
          "type": "JSX_TEXT_BLOCK",
          "uniqueID": "",
        },
        Object {
          "condition": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": false,
          },
          "type": "JSX_CONDITIONAL_EXPRESSION",
          "uniqueID": "",
          "whenFalse": Object {
            "definedElsewhere": Array [
              "React",
            ],
            "javascript": "<span />",
            "sourceMap": Object {
              "file": "code.tsx",
              "mappings": "OAa2BA,iCAADC",
              "names": Array [
                "span",
                "<",
              ],
              "sources": Array [
                "code.tsx",
              ],
              "sourcesContent": Array [
                "/** @jsx jsx */
import * as React from 'react'
import { Scene, Storyboard, jsx } from 'utopia-api'
export var App = (props) => {
  return (
    <div
      style={{
        width: '100%',
        height: '100%',
        backgroundColor: '#FFFFFF',
      }}
      layout={{ layoutSystem: 'pinSystem' }}
    >
      {false ? <div /> : <span />}
    </div>
  )
}
export var storyboard = (
  <Storyboard
    data-uid={'utopia-storyboard-uid'}
    layout={{ layoutSystem: 'pinSystem' }}
  >
    <Scene
      style={{
        position: 'absolute',
        left: 0,
        top: 0,
        width: 375,
        height: 812,
      }}
      component={App}
      layout={{ layoutSystem: 'pinSystem' }}
      props={{
        layout: { bottom: 0, left: 0, right: 0, top: 0 },
      }}
      data-uid={'scene-aaa'}
    />
  </Storyboard>
)
",
              ],
              "version": 3,
            },
            "transpiledJavascript": "return React.createElement(\\"span\\", null);",
            "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
            "uniqueID": "",
          },
          "whenTrue": Object {
            "definedElsewhere": Array [
              "React",
            ],
            "javascript": "<div />",
            "sourceMap": Object {
              "file": "code.tsx",
              "mappings": "OAaiBA,gCAADC",
              "names": Array [
                "div",
                "<",
              ],
              "sources": Array [
                "code.tsx",
              ],
              "sourcesContent": Array [
                "/** @jsx jsx */
import * as React from 'react'
import { Scene, Storyboard, jsx } from 'utopia-api'
export var App = (props) => {
  return (
    <div
      style={{
        width: '100%',
        height: '100%',
        backgroundColor: '#FFFFFF',
      }}
      layout={{ layoutSystem: 'pinSystem' }}
    >
      {false ? <div /> : <span />}
    </div>
  )
}
export var storyboard = (
  <Storyboard
    data-uid={'utopia-storyboard-uid'}
    layout={{ layoutSystem: 'pinSystem' }}
  >
    <Scene
      style={{
        position: 'absolute',
        left: 0,
        top: 0,
        width: 375,
        height: 812,
      }}
      component={App}
      layout={{ layoutSystem: 'pinSystem' }}
      props={{
        layout: { bottom: 0, left: 0, right: 0, top: 0 },
      }}
      data-uid={'scene-aaa'}
    />
  </Storyboard>
)
",
              ],
              "version": 3,
            },
            "transpiledJavascript": "return React.createElement(\\"div\\", null);",
            "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
            "uniqueID": "",
          },
        },
        Object {
          "text": "
    ",
          "type": "JSX_TEXT_BLOCK",
          "uniqueID": "",
        },
      ],
      "name": Object {
        "baseVariable": "div",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "backgroundColor": "#FFFFFF",
              "height": "100%",
              "width": "100%",
            },
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "layout",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "layoutSystem": "pinSystem",
            },
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "6eb",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "6eb",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "parenthesized-expression",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "height": 812,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 375,
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "javascript": "App",
                "sourceMap": Object {
                  "file": "code.tsx",
                  "mappings": "OA8BkBA",
                  "names": Array [
                    "App",
                  ],
                  "sources": Array [
                    "code.tsx",
                  ],
                  "sourcesContent": Array [
                    "/** @jsx jsx */
import * as React from 'react'
import { Scene, Storyboard, jsx } from 'utopia-api'
export var App = (props) => {
  return (
    <div
      style={{
        width: '100%',
        height: '100%',
        backgroundColor: '#FFFFFF',
      }}
      layout={{ layoutSystem: 'pinSystem' }}
    >
      {false ? <div /> : <span />}
    </div>
  )
}
export var storyboard = (
  <Storyboard
    data-uid={'utopia-storyboard-uid'}
    layout={{ layoutSystem: 'pinSystem' }}
  >
    <Scene
      style={{
        position: 'absolute',
        left: 0,
        top: 0,
        width: 375,
        height: 812,
      }}
      component={App}
      layout={{ layoutSystem: 'pinSystem' }}
      props={{
        layout: { bottom: 0, left: 0, right: 0, top: 0 },
      }}
      data-uid={'scene-aaa'}
    />
  </Storyboard>
)
",
                  ],
                  "version": 3,
                },
                "transpiledJavascript": "return App;",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uniqueID": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "layout",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "layoutSystem": "pinSystem",
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "props",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": Object {
                  "layout": Object {
                    "bottom": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                  },
                },
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "value": "scene-aaa",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "scene-aaa",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": "utopia-storyboard-uid",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "layout",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "value": Object {
              "layoutSystem": "pinSystem",
            },
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "utopia-storyboard-uid",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "rawCode": "
",
    "type": "UNPARSED_CODE",
  },
]
`;
